# STEF

./: .cproject  .gitignore  .project  Animacao.cpp  Animacao.h  Antropometria.cpp  Antropometria.h  CMakeLists.txt  Desenha.cpp  Desenha.h  DesenhaExp.layout  Dockerfile  Entrada.cpp  Entrada.h  Face.cpp  Face.h  Grafo.cpp  Grafo.h  Medidas.cpp  Medidas.h  MedidasBase.h  MedidasFactory.cpp  MedidasFactory.h  Movimentos.cpp  Movimentos.h  No.cpp  No.h  Parametrizacao.cpp  Parametrizacao.h  PontosRafael.txt  README.md  RafaMedidas.cpp  RafaMedidas.h  Saida.cpp  Saida.h  TesteMedidas.cpp  TesteMedidas.h  _cproject  build.sh  main.cpp  (+1 more)
data/: 1_Alfas_Neutra_Satisfacao.txt  2_Alfas_Neutra_Tristeza.txt  3_Alfas_Neutra_Surpresa.txt  4_Alfas_Neutra_Medo.txt  5_Alfas_Neutra_Raiva.txt  6_Alfas_Neutra_Aversao.txt  FaceMov.txt  Grafo.txt
include/: MedidasBase.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/: Animacao.cpp  Antropometria.cpp  Face.cpp  Movimentos.cpp  Movimentos.h  Parametrizacao.cpp  Saida.cpp~  Saida.h
